--- a/QuickPaste/Views/FileStorages/Index.cshtml
+++ b/QuickPaste/Views/FileStorages/Index.cshtml
@@ -1,47 +1,34 @@
-﻿@model IEnumerable<QuickPaste.Models.FileStorage>
-
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "Copy";
 }
 
-<h1>Index</h1>
+<h1>Copy files</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TimeUploaded)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Filename)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PastedCode)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TimeUploaded)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Filename)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PastedCode.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<input type="file" id="input-file-now" class="file-upload" />
+<button class="btn btn-primary" id="btn-submit">Copy</button>
+
+<script>
+    $(document).ready(function () {
+        $("#btn-submit").click(function () {
+            var fileInput = document.getElementById('input-file-now');
+            var file = fileInput.files[0];
+
+            var formData = new FormData();
+            formData.append('file', file);
+
+            $.ajax({
+                url: '/FileStorages/UploadFile', 
+                type: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: function (data) {
+                    console.log("File uploaded successfully");
+                },
+                error: function (error) {
+                    console.error("Error uploading file: " + error.responseText);
+                }
+            });
+        });
+    });
+</script>
