--- a/QuickPaste/Views/FileStorages/UploadFiles.cshtml
+++ b/QuickPaste/Views/FileStorages/UploadFiles.cshtml
@@ -13,6 +13,8 @@
 
 <button id="submitBtn">Submit</button>
 
+<div id="copy-code"></div>
+
 <script>
     var dropArea = document.getElementById('drop-area');
     var fileList = document.getElementById('file-list');
@@ -92,6 +94,7 @@
             .then(response => response.text())
             .then(result => {
                 console.log(result);
+                document.getElementById('copy-code').innerHTML = result;
             })
             .catch(error => {
                 console.error(error);
