Get files done, multiple files same code done.

--- a/QuickPaste/Views/FileStorages/UploadFiles.cshtml
+++ b/QuickPaste/Views/FileStorages/UploadFiles.cshtml
@@ -11,7 +11,7 @@
 
 <ul id="file-list"></ul>
 
-<button id="submitBtn">Submit</button>
+<button id="submitBtn">Copy</button>
 
 <div id="copy-code"></div>
 
