--- a/QuickPaste/Views/Home/Index.cshtml
+++ b/QuickPaste/Views/Home/Index.cshtml
@@ -5,3 +5,7 @@
 <h1>Choose what u want to do</h1>
 
 <a asp-controller="FileStorages">Other files</a>
+
+<h2>OR</h2>
+
+<a asp-controller="TextStorages">Text</a>
