Started working on a text files with cosmos db

--- a/QuickPaste/Views/TextStorages/Index.cshtml
+++ b/QuickPaste/Views/TextStorages/Index.cshtml
@@ -5,8 +5,8 @@
 
 <h1>Copy text with code</h1>
 
-@* <a asp-controller="TextStorages" asp-action="UploadFiles">Copy</a>
- *@
+<a asp-controller="TextStorages" asp-action="UploadFiles">Copy</a>
+
 <h2>OR</h2>
 
 <h1>Paste text from code?</h1>
