Basic text  copying implementation done

--- a/QuickPaste/Views/TextStorages/GetFiles.cshtml
+++ b/QuickPaste/Views/TextStorages/GetFiles.cshtml
@@ -1,1 +1,38 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Paste";
+}
+
+<h1>Paste files from code</h1>
+
+<div>
+    <input id="paste-code" />
+</div>
+
+<button id="submitBtn">Paste</button>
+
+<div id="retrieved-text"></div> 
+
+<script>
+    var submitBtn = document.getElementById('submitBtn');
+    var pasteCodeInput = document.getElementById('paste-code');
+    var retrievedFilesContainer = document.getElementById('retrieved-text'); 
+
+    document.getElementById("submitBtn").addEventListener("click", function () {
+        var code = document.getElementById("paste-code").value; 
+        var formData = new FormData();
+        formData.append('code', code); 
+
+        fetch('/TextStorages/GetFilesByCode', {
+            method: 'POST',
+            body: formData
+        })
+            .then(response => response.text())
+            .then(result => {
+                console.log(result);
+                retrievedFilesContainer.innerHTML = result;
+            })
+            .catch(error => {
+                console.error(error);
+            });
+    });
+</script>
