--- a/QuickPaste/Views/TextStorages/Index.cshtml
+++ b/QuickPaste/Views/TextStorages/Index.cshtml
@@ -11,4 +11,4 @@
 
 <h1>Paste text from code?</h1>
 
-@* <a asp-controller="FileStorages" asp-action="GetFiles">Paste</a> *@
+<a asp-controller="TextStorages" asp-action="GetFiles">Paste</a>
