--- a/QuickPaste/Views/Shared/_Layout.cshtml
+++ b/QuickPaste/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <body>
     <header>
     </header>
-    <div class="container">
+    <div class="container d-flex justify-content-center">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
